[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typermd"
version = "0.1.4"
description = "Markdown rendering for Typer CLI applications — drop-in replacement with syntax highlighting"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = ["typer", "markdown", "cli", "terminal", "syntax-highlighting", "rich-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/wronai/typermd"
Repository = "https://github.com/wronai/typermd"
Issues = "https://github.com/wronai/typermd/issues"
Documentation = "https://github.com/wronai/typermd#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/typermd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
